--- a/Acceuil.html
+++ b/Acceuil.html
@@ -91,14 +91,14 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="Services.html" class="dropdown-item">Voyage</a>
-                    <!--    <a href="Gardinage.html" class="dropdown-item">Gardinage</a>
-                            <a href="Securite.html" class="dropdown-item">Sécurité</a> -->
+                        <a href="Securite.html" class="dropdown-item">Payer ma facture</a>
+                        <a href="Soumettre.html" class="dropdown-item">Soumettre mon dossier en ligne</a>
+                        
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                 <a href="temoignage.html" class="nav-item nav-link">Témoignages</a>
                 <a href="Apropos.html" class="nav-item nav-link">A propos</a>
-            <!--    <a href="Connexion.html" class="nav-item nav-link">Connexion</a>    -->
             </div>
         </div>
     </nav>
@@ -265,107 +265,11 @@
                         </div>
                     </div>
                 </div>
-<!-- 
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="courses-item d-flex flex-column bg-white overflow-hidden h-100">
-                        <div class="text-center p-4 pt-0">
-                            <div class="d-inline-block bg-primary text-white fs-5 py-1 px-4 mb-4">$200</div>
-                            <h5 class="mb-3">Pour une facilitation de 3 jours</h5>
-                            <p>Pour une facilitation de 1 à 3 jours</p>
-                            <ol class="breadcrumb justify-content-center mb-0">
-                                <li class="breadcrumb-item small"><i class="fa fa-signal text-primary me-2"></i>Moyen</li>
-                                <li class="breadcrumb-item small"><i class="fa fa-calendar-alt text-primary me-2"></i>10 jours</li>
-                            </ol>
-                        </div>
-                        <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/Pho.jpg" alt="">
-                        </div>
-                    </div>
-                -->
+
                 </div>
             </div>
         </div>
     </div>
-
-                    <!--
-                <div class="col-lg-8 my-6 mb-0 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="bg-primary text-center p-5">
-                        <h1 class="mb-4">Formulaire</h1>
-                        <form>
-                            <div>
-                            <div class="row g-3">
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name" required>
-                                        <label for="gname">Noms</label>
-                                    </div>
-                                </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-floating">
-                                            <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name" required>
-                                            <label for="gname">Prenom</label>
-                                        </div>
-                                    </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email" required>
-                                        <label for="gmail">Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="Type_P" placeholder="Child Name" required>
-                                        <label for="cname">Type de passeport</label>
-                                    </div>
-                            </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="Type_V" placeholder="Child Age">
-                                        <label for="cage">Type de voyage</label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="Num_P" placeholder="Child Age">
-                                        <label for="cage">Numéro passeport</label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="sexe" placeholder="Child Age">
-                                        <label for="cage">Sexe</label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="Date" placeholder="Child Age">
-                                        <label for="cage">Date de naissance</label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="Adresse" placeholder="Child Age">
-                                        <label for="cage">Adresse</label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0" id="Num_P" placeholder="Child Age">
-                                        <label for="cage">Portable</label>
-                                    </div>
-                                </div>
-
-                                <div class="col-12">
-                                    <button class="btn btn-dark w-100 py-3" type="submit">Enregistrer</button>
-                                </div>
-                            </div>
-                        </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    FIN DU FORM A
-        -->    
 
     <!-- Features Start -->
     <div class="container-xxl py-6">
@@ -425,87 +329,84 @@
     </div>
     <!-- Features End -->
 
-    <!-- Bas de page -->
-    <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Cabinet de Consulting et de Coaching par excellence</h4>
-                    <h2 class="text-primary mb-4"><i class="fa fa-avion text-white me-0"></i>Emploi & Services</h2>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Kinshasa</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-2"></i>emploietservices@gmail.com</p>
-                </div>
-                
-                <div class="col-lg-3 col-md-5">
-                    <h4 class="text-light mb-4">...</h4>
-                <a href="contact.html" class="btn btn-link" href="">Contact</a>
-                <a href="Services.html" class="btn btn-link" href="">Autres services</a>
-                <a href="Apropos.html" class="btn btn-link" href="">A Propos</a>
-                <a href="" src="tk.pdf" class="btn btn-link" href="">Terms & Condition</a>
-                <a class="" download="tk.txt"></a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <form action="">
-                        <div class="input-group">
-                            <button class="btn btn-primary">Cliquez ici pour vous inscrire <a href="Formulaire.html" class="nav-item nav-link"></a></button>
-                        </div>
-                    </form>
-                    <h6 class="text-white mt-4 mb-3">Ecrivez-nous</h6>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-light me-1" href="https://www.facebook.com/profile.php?id=61550810019498&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-light me-1" href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-light me-1" href="https://www.tiktok.com/tag/emploietservices%E2%9D%A4%EF%B8%8F%F0%9F%87%A8%F0%9F%87%A9%F0%9F%87%A8%F0%9F%87%AC%F0%9F%87%A8%F0%9F%87%BA%F0%9F%87%A7%F0%9F%87%AA%F0%9F%87%A8%F0%9F%87%A6%F0%9F%87%A8%F0%9F%87%AC%F0%9F%87%A8%F0%9F%87%B3%E2%9C%85"><i class="fab.fa-tiktok"></i></a>
-                        <a class="btn btn-square btn-outline-light me-1" href="https://wa.me/+243819110509?"><i class="fab fa-whatsapp"></i></a>
-                    </div>
-                    <h6 class="text-white mt-4 mb-3">Nous acceptons</h6>
-                    <div class="d-flex pt-2">
-                        <img class="img-fluid" src="img/Paie0.jpg" alt="">
-                    </div>
-                    </div>
-                </div>
+   <!-- Bas de page -->
+  <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container">
+        <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+                <h4 class="text-white mb-4">Cabinet de Consulting et de Coaching par excellence</h4>
+                <h2 class="text-primary mb-4"><i class="fa fa-avion text-white me-0"></i>Emploi & Services</h2>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Kinshasa</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265</p>
+                <p class="mb-2"><i class="fa fa-envelope me-2"></i>emploietservices@gmail.com</p>
             </div>
-        </div>
-    </div>
-
-
-    <!-- Footer End -->
-
-
-    <!-- Début de la signature -->
-    <div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a href="#">Toutkin</a>, 2023
+            <div class="col-lg-3 col-md-5">
+                <h4 class="text-light mb-4">...</h4>
+            <a href="contact.html" class="btn btn-link" href="">Contact</a>
+            <a href="Services.html" class="btn btn-link" href="">Autres services</a>
+            <a href="Apropos.html" class="btn btn-link" href="">A Propos</a>
+            <a class="btn btn-link" href="">Terms & Condition</a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <form action="">
+                    <div class="input-group">
+                        <button class="btn btn-primary">Cliquez ici pour vous inscrire <a href="Formulaire.html" class="nav-item nav-link"></a></button>
+                    </div>
+                </form>
+                <h6 class="text-white mt-4 mb-3">Ecrivez-nous</h6>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-square btn-outline-light me-1" href="https://www.facebook.com/profile.php?id=61550810019498&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square btn-outline-light me-1" href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square btn-outline-light me-1" href="https://www.tiktok.com/tag/emploietservices%E2%9D%A4%EF%B8%8F%F0%9F%87%A8%F0%9F%87%A9%F0%9F%87%A8%F0%9F%87%AC%F0%9F%87%A8%F0%9F%87%BA%F0%9F%87%A7%F0%9F%87%AA%F0%9F%87%A8%F0%9F%87%A6%F0%9F%87%A8%F0%9F%87%AC%F0%9F%87%A8%F0%9F%87%B3%E2%9C%85"><i class="fab.fa-tiktok"></i></a>
+                    <a class="btn btn-square btn-outline-light me-1" href="https://wa.me/+243819110509?"><i class="fab fa-whatsapp"></i></a>
                 </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <br>Designed By : <a href="">Merdi MOKE</a>
-                    <br>Distributed By : <a href="" target="_blank">Merdi MOKE</a>
+                <h6 class="text-white mt-4 mb-3">Nous acceptons</h6>
+                <div class="d-flex pt-2">
+                <img class="img-fluid" src="img/Paie0.jpg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-    <!-- Fin de la signature -->
 
 
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+<!-- Footer End -->
 
 
-    <!-- Librairie de JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<!-- Début de la signature -->
+<div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                &copy; <a href="#">Toutkin</a>, 2023
+            </div>
+            <div class="col-md-6 text-center text-md-end">
+                <br>Designed By : <a href="">Merdi MOKE</a>
+                <br>Distributed By : <a href="" target="_blank">Merdi MOKE</a>
+        </div>
+    </div>
+</div>
+</div>
+<!-- Fin de la signature -->
 
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+
+<!-- Back to Top -->
+<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+
+
+<!-- Librairie de JavaScript -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="lib/wow/wow.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+<!-- Template Javascript -->
+<script src="js/main.js"></script>
 </body>
 
 </html>
