--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small>+ 243 819 110 509 / 898 705 265</small>
+                    <small> + 243 819 110 509 / 898 705 265 </small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-facebook-f"></i></a>
@@ -108,7 +108,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-6 my-6 mt-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center">
-            <h1 class="display-4 text-white animated slideInDown mb-4">...</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4">Prendre rendez-vous</h1>
         </div>
     </div>
 
@@ -123,11 +123,10 @@
                     tabindex="0">
                 </iframe>
             </div>
-            </div>
-                
+            </div>    
                 <!-- <h6 class="text-primary text-uppercase mb-2">Contact</h6>    -->
-                    <h1 class="display-6 mb-4">Laissez nous un message</h1>
-                    <p class="mb-4">Prière de bien remplir le formulaire ou cliquez ici pour <a href="Formulaire.html" class="nav-item nav-link">Voir le formulaire</a>.</p>
+                    <h1 class="display-6 mb-4">Prière de bien remplir ce formulaire avant d'envoyer votre message. </h1>
+                <!--<p class="mb-4">Prière de bien remplir ce formulaire avant d'envonyer votre message.</p> -->
                     <form>
                         <div class="row g-3">
                             <div class="col-md-6">
@@ -139,23 +138,36 @@
                             <div class="col-md-6">
                                 <div class="form-floating">
                                     <input type="email" class="form-control border-0 bg-light" id="email" placeholder="Your Email">
-                                    <label for="email">Votre email</label>
+                                    <label for="email">Email</label>
                                 </div>
                             </div>
+                            <div class="row g-3">
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control border-0 bg-light" id="name" placeholder="Your Name">
+                                        <label for="name">Sexe</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control border-0 bg-light" id="text" placeholder="Your number">
+                                        <label for="email">Numéro de téléphone  </label>
+                                    </div>
+                                </div>
                             <div class="col-12">
                                 <div class="form-floating">
                                     <input type="text" class="form-control border-0 bg-light" id="subject" placeholder="Subject">
-                                    <label for="subject">Obejt</label>
+                                    <label for="subject">Obejt de votre demande</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
                                     <textarea class="form-control border-0 bg-light" placeholder="Leave a message here" id="message" style="height: 150px"></textarea>
-                                    <label for="message">Message</label>
+                                    <label for="message">Laissez votre message ici</label>
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary py-3 px-5" a href="malito:contacteremploietservices@gmail.com" type="submit">Envoyer message </a></p> </button>
+                                <button class="btn btn-primary py-3 px-5" a href="merdimoke040@gmail.com" a href="eliewunda@gmail.com" type="submit">Envoyer message </a></p> </button>
                             </div>
                         </div>
                     </form>
@@ -239,8 +251,8 @@
                     <a class="btn btn-square btn-outline-light me-1" href="https://wa.me/+243819110509?"><i class="fab fa-whatsapp"></i></a>
                 </div>
                 <h6 class="text-white mt-4 mb-3">Nous acceptons</h6>
-                    <div class="d-flex pt-2">
-                    <img class="img-fluid" src="img/Paie0.jpg" alt="">
+                <div class="d-flex pt-2">
+                <img class="img-fluid" src="img/Paie0.jpg" alt="">
                     </div>
                 </div>
             </div>
