--- a/Acceuil.html
+++ b/Acceuil.html
@@ -91,9 +91,8 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="Services.html" class="dropdown-item">Voyage</a>
-                        <a href="Securite.html" class="dropdown-item">Payer ma facture</a>
+                        <a href="404.html" class="dropdown-item">Payer ma facture</a>
                         <a href="Soumettre.html" class="dropdown-item">Soumettre mon dossier en ligne</a>
-                        
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -148,7 +147,7 @@
         </div>
     </div>
 
-    <!-- Fin de la partie animation -->
+
 
     <!-- Début de nos types des services -->
     <div class="container-fluid facts py-5 pt-lg-0">
@@ -195,9 +194,18 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+
     <!-- Fin de nos types des services -->
+
+    <div class="container-xxl py-2">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1500px;">
+        <!--<h1 class="text-primary text-uppercase mb-2">.</h1>-->
+            <hr>
+            <h5>L'agence Emploi et Service est une agence de Proximitée, Expertise et de Consultance en migration qui vise l'interet de la population cherchant une assistance pour tout type de Visa.</h5>
+            <h5>Emploi et Service vous accompagnes et vous entraines afin d'augmenter vos chances de réussite à tout le processus avec son équipe expérimentée, qualifiée, dévouée qui travail chaque dossier avec la meme energye.</h5>
+            <h5>Avec sa divesité des services, Emploi et Service vous oriente afin de vous aider à bien vous préparer à tout éventualités et répondre à toutes les questions pertinantes qui pourraient vous etre demandées par les services d'immigration du pays ou de la zone dans lequel vous désirez y aller.</h5>
+        </div>
+    </div>
 
     <!-- Annonce publicitaire begin -->
     <div class="container-xxl py-0">
@@ -208,28 +216,28 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/Se1A.jpg" alt="">
+                            <img class="img-fluid" src="img/ES1.JPG" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/Se2A.jpg" alt="">
+                            <img class="img-fluid" src="img/SD2.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/Se3A.jpg" alt="">
+                            <img class="img-fluid" src="img/SI3.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/Se4A.jpg" alt="">
+                            <img class="img-fluid" src="img/ES1.JPG" alt="">
                             </div>
                         </div>
                     </div>
@@ -238,9 +246,12 @@
         </div>
     </div>
 </div>
+</div>
+
 
 <!-- Annonce publicitaire end -->
-<div class="container-xxl py-6">
+<!--    
+<div class="container-xxl py-4">
     <div class="container">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1000px;">
             <h1 class="display-6 text-primary text-uppercase mb-4">Nos frais tarifaires</h1>
@@ -270,7 +281,7 @@
             </div>
         </div>
     </div>
-
+-->
     <!-- Features Start -->
     <div class="container-xxl py-6">
         <div class="container">
@@ -329,32 +340,40 @@
     </div>
     <!-- Features End -->
 
-   <!-- Bas de page -->
-  <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
+<!-- Bas de page -->
+<div class="container-fluid bg-dark text-light footer my-2 mb-0 py-2 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
-        <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
-                <h4 class="text-white mb-4">Cabinet de Consulting et de Coaching par excellence</h4>
-                <h2 class="text-primary mb-4"><i class="fa fa-avion text-white me-0"></i>Emploi & Services</h2>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Kinshasa</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265</p>
+        <div class="row g-1">
+            <div class="col-lg-6 col-md-10">
+                <h4 class="text-white mb-4">Cabinet de Consulting et de Coaching par excellence.</h4>
+                <h2 class="text-primary mb-4"><i class="fa fa-plane text-white me-0"></i> Emploi & Services</h4>
+                <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265 / 817 112 751</p>
                 <p class="mb-2"><i class="fa fa-envelope me-2"></i>emploietservices@gmail.com</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>N* 211, Nyangwe, Réf: Staff OTOMA, Lingwala, Kinshasa</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>N* 4364, N'djili Q/ 12, Blvrd Lumumba, Réf: Kimbuta, Kinshasa</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>N* 1, Avenue kakongo, C/Matadi, Q/ Salongo, Matadi</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Commune de Lubumbashi, vers la Fec, Coins tabora, Lubumbashi</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Brazaville</p>    
             </div>
-            <div class="col-lg-3 col-md-5">
-                <h4 class="text-light mb-4">...</h4>
+            <!--
+            <div class="col-lg-1 col-md-5">
+                <h4 class="text-light mb-3">...</h4>
             <a href="contact.html" class="btn btn-link" href="">Contact</a>
             <a href="Services.html" class="btn btn-link" href="">Autres services</a>
             <a href="Apropos.html" class="btn btn-link" href="">A Propos</a>
             <a class="btn btn-link" href="">Terms & Condition</a>
             </div>
-            <div class="col-lg-3 col-md-6">
+            -->
+            <div class="col-lg-3 col-md-4">
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-4">
+            <!--
                 <form action="">
-                    <div class="input-group">
-                        <button class="btn btn-primary">Cliquez ici pour vous inscrire <a href="Formulaire.html" class="nav-item nav-link"></a></button>
-                    </div>
+                <div class="input-group">
+                <button class="btn btn-primary">Soumettre un dossier<a href="Formulaire.html" class="nav-item nav-link"></a></button>
+                </div>
                 </form>
+            -->
                 <h6 class="text-white mt-4 mb-3">Ecrivez-nous</h6>
                 <div class="d-flex pt-2">
                     <a class="btn btn-square btn-outline-light me-1" href="https://www.facebook.com/profile.php?id=61550810019498&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
@@ -365,7 +384,6 @@
                 <h6 class="text-white mt-4 mb-3">Nous acceptons</h6>
                 <div class="d-flex pt-2">
                 <img class="img-fluid" src="img/Paie0.jpg" alt="">
-                    </div>
                 </div>
             </div>
         </div>
@@ -373,19 +391,16 @@
 </div>
 
 
-<!-- Footer End -->
-
-
 <!-- Début de la signature -->
 <div class="container-fluid copyright text-light py-4 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                &copy; <a href="#">Toutkin</a>, 2023
+                &copy; <a href="#"> Emploi et Service</a>, 2023
             </div>
             <div class="col-md-6 text-center text-md-end">
-                <br>Designed By : <a href="">Merdi MOKE</a>
-                <br>Distributed By : <a href="" target="_blank">Merdi MOKE</a>
+                <br>Designed By : <a href="https://wa.me/+243824490107?">Intello</a>
+                <br>Distributed By : <a href="https://wa.me/+243824490107?">Intello</a>
         </div>
     </div>
 </div>
@@ -393,9 +408,7 @@
 <!-- Fin de la signature -->
 
 
-<!-- Back to Top -->
 <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-
 
 <!-- Librairie de JavaScript -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
