--- a/Temoignage.html
+++ b/Temoignage.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Nom de l'onglet -->
     <meta charset="utf-8">
-    <title>Emploi et Services</title>
+    <title>Emploi_et_Services_Temoignages</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -92,8 +92,8 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="Services.html" class="dropdown-item">Voyage</a>
-                    <!--    <a href="Gardinage.html" class="dropdown-item">Gardinage</a>
-                            <a href="Securite.html" class="dropdown-item">Sécurité</a> -->
+                        <a href="404.html" class="dropdown-item">Payer ma facture</a>
+                        <a href="Soumettre.html" class="dropdown-item">Soumettre mon dossier en ligne</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -108,7 +108,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-6 my-6 mt-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center">
-            <h1 class="display-4 text-white animated slideInDown mb-4">...</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4">Ils nous ont fait confiance</h1>
         </div>
     </div>
     <!-- Page Header End -->
@@ -119,6 +119,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
                 <h1 class="text-primary text-uppercase mb-2">Témoignages</h1>
+                <hr>
                 <h1 class="display-6 mb-4">Qu'est-ce qu'ils disent sur nous ?</h1>
             </div>
             <div class="row justify-content-center">
@@ -167,95 +168,99 @@
                 </div>
             </div>
         </div>
-    </div>
+    
 <!-- Témoignage fin -->
 
+<div class="container-xxl py-6">
+    <div class="container">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
+            <h1 class="text-primary text-uppercase mb-2">Galerie</h1>
+            <hr>
 
-    <!-- Features Start -->
-    <div class="container-xxl py-6">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-primary text-uppercase mb-2">L'agence de proximitée</h6>
-                    <h1 class="display-6 mb-4">L'agence qui vous donne le Visa dans un delais hors concurent.</h1>
-                    <p class="mb-5">Ici nous allons donner une précision nette sur l'agence</p>
-                    <div class="row gy-5 gx-4">
-                        <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="flex-shrink-0 btn-square bg-primary me-3">
-                                    <i class="fa fa-check text-white"></i>
-                                </div>
-                                <h5 class="mb-0">Visa d'étude</h5>
-                            </div>
-                            <span>Mot du directeur sur ce Visa</span>
-                        </div>
-                        <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="flex-shrink-0 btn-square bg-primary me-3">
-                                    <i class="fa fa-check text-white"></i>
-                                </div>
-                                <h5 class="mb-0">Visa tourisme</h5>
-                            </div>
-                            <span>Mot du directeur sur ce Visa</span>
-                        </div>
-                        <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="flex-shrink-0 btn-square bg-primary me-3">
-                                    <i class="fa fa-check text-white"></i>
-                                </div>
-                                <h5 class="mb-0">Visa maladie</h5>
-                            </div>
-                            <span>Mot du directeur sur ce Visa</span>
-                        </div>
-                        <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="flex-shrink-0 btn-square bg-primary me-3">
-                                    <i class="fa fa-check text-white"></i>
-                                </div>
-                                <h5 class="mb-0">Visa visiteur</h5>
-                            </div>
-                            <span>Mot du directeur sur ce Visa</span>
-                        </div>
+        <!-- Tem  
+        </div>
+        <div class="row g-0 team-items">
+            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="team-item position-relative">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Ma3.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="position-relative overflow-hidden pe-5 pt-5 h-500" style="min-height: 500px;">
-                        <img class="position-absolute w-100 h-100" src="img/Ma1.jpg" alt="" style="object-fit: cover;">
-                        <img class="position-absolute top-0 end-0 bg-white ps-3 pb-3" src="img/Ma2.jpg" alt="" style="width: 200px; height: 200px">
+            </div>
+            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="team-item position-relative">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Seco.jpg" alt="">
                     </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="team-item position-relative">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Int.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                <div class="team-item position-relative">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/CA.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="team-item position-relative">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/Rec.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="team-item position-relative">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/Deb.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="team-item position-relative">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/Rec.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="team-item position-relative">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/Deb.jpg" alt="">
+                            </div>
+                        </div>
+                        -->
+                        
                 </div>
             </div>
         </div>
     </div>
-    <!-- Features End -->
+</div>
 
-
-  <!-- Bas de page -->
-  <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
+<!-- Bas de page -->
+<div class="container-fluid bg-dark text-light footer my-2 mb-0 py-2 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
-        <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
-                <h4 class="text-white mb-4">Cabinet de Consulting et de Coaching par excellence</h4>
-                <h2 class="text-primary mb-4"><i class="fa fa-avion text-white me-0"></i>Emploi & Services</h2>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Kinshasa</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265</p>
+        <div class="row g-1">
+            <div class="col-lg-6 col-md-10">
+                <h4 class="text-white mb-4">Cabinet de Consulting et de Coaching par excellence.</h4>
+                <h2 class="text-primary mb-4"><i class="fa fa-plane text-white me-0"></i> Emploi & Services</h4>
+                <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+ 243 819 110 509 / 898 705 265 / 817 112 751</p>
                 <p class="mb-2"><i class="fa fa-envelope me-2"></i>emploietservices@gmail.com</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>N* 211, Nyangwe, Réf: Staff OTOMA, Lingwala, Kinshasa</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>N* 4364, N'djili Q/ 12, Blvrd Lumumba, Réf: Kimbuta, Kinshasa</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>N* 1, Avenue kakongo, C/Matadi, Q/ Salongo, Matadi</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Commune de Lubumbashi, vers la Fec, Coins tabora, Lubumbashi</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>211 Nyangwe, Lingwala, Brazaville</p>    
             </div>
-            <div class="col-lg-3 col-md-5">
-                <h4 class="text-light mb-4">...</h4>
-            <a href="contact.html" class="btn btn-link" href="">Contact</a>
-            <a href="Services.html" class="btn btn-link" href="">Autres services</a>
-            <a href="Apropos.html" class="btn btn-link" href="">A Propos</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
+            <div class="col-lg-3 col-md-4">
             </div>
-            <div class="col-lg-3 col-md-6">
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <form action="">
-                    <div class="input-group">
-                        <button class="btn btn-primary">Cliquez ici pour vous inscrire <a href="Formulaire.html" class="nav-item nav-link"></a></button>
-                    </div>
-                </form>
+            <div class="col-lg-3 col-md-4">
                 <h6 class="text-white mt-4 mb-3">Ecrivez-nous</h6>
                 <div class="d-flex pt-2">
                     <a class="btn btn-square btn-outline-light me-1" href="https://www.facebook.com/profile.php?id=61550810019498&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
@@ -264,13 +269,15 @@
                     <a class="btn btn-square btn-outline-light me-1" href="https://wa.me/+243819110509?"><i class="fab fa-whatsapp"></i></a>
                 </div>
                 <h6 class="text-white mt-4 mb-3">Nous acceptons</h6>
-                    <div class="d-flex pt-2">
-                    <img class="img-fluid" src="img/Paie0.jpg" alt="">
-                    </div>
+                <div class="d-flex pt-2">
+                <img class="img-fluid" src="img/Paie0.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
 </div>
+</div>
+
 
 
 <!-- Footer End -->
@@ -281,11 +288,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                &copy; <a href="#">Toutkin</a>, 2023
+                &copy; <a href="#"> Emploi et Service</a>, 2023
             </div>
             <div class="col-md-6 text-center text-md-end">
-                <br>Designed By : <a href="">Merdi MOKE</a>
-                <br>Distributed By : <a href="" target="_blank">Merdi MOKE</a>
+                <br>Designed By : <a href="https://wa.me/+243824490107?">Intello</a>
+                <br>Distributed By : <a href="https://wa.me/+243824490107?">Intello</a>
         </div>
     </div>
 </div>
